--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "styled-components": "5.3.9"
   },
