--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@hookform/resolvers": "^3.3.0",
     "expo": "~49.0.7",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.3",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "styled-components": "5.3.9"
+    "styled-components": "5.3.9",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
